bugfix: visibility of ownership-transfer pro-de-mote menu
Promote to co-owner
- Show the button on the menu of 'member' user

Demote to member
- Show the button on the menu of 'manager' user

Transfer ownership
- Show 'ownership transfer button' on the menu of 'manager' user for the workspace owner's interface (not co-owner's)
- Button is shown but deactivated until the backend will be ready.

--- a/src/app/components/main-page/main-workspace-members/main-workspace-members.component.scss
+++ b/src/app/components/main-page/main-workspace-members/main-workspace-members.component.scss
@@ -1,11 +1,7 @@
 @import "src/styles/main.scss";
 
 #workspace-members-container {
-  .cell-role {
-    color: map-get($app-primary, default);
-
-    mat-icon {
-      margin-right: 5px;
-    }
+  .my-account {
+    background: map-get($app-primary, 100);
   }
 }
